Add multiple script tags for ad options

--- a/templates/index.html
+++ b/templates/index.html
@@ -128,5 +128,16 @@
       };
     </script>
     <script src="https://www.highperformanceformat.com/92cf0a006f023c446d7b59ad44f9e636/invoke.js"></script>
+    <script>
+  atOptions = {
+    'key' : '4d81122467af6ff48fca70b62cab5aad',
+    'format' : 'iframe',
+    'height' : 60,
+    'width' : 468,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/4d81122467af6ff48fca70b62cab5aad/invoke.js"></script>
+    <script src="https://pl28419011.effectivegatecpm.com/a0/18/27/a0182723af3a58a7b5d0f4ac34f3364d.js"></script>
   </body>
 </html>
